@@ -1,3 +1,5 @@
+DEST=/usr/local
+LOCALEDIR=$(DEST)/share/locale
 CCPLUS = c++
 CFLAGS=-Wall -O2 -D_REENTRANT -D_POSIX_PTHREAD_SEMANTICS
 EXECC=$(CCPLUS) $(CFLAGS) $(GTKFLAGS) $(NLS) -DLOCALE=\"${LOCALEDIR}\"
