@@ -1,3 +1,7 @@
+Fri Nov  5 09:58:50 1999
+    Fixed auto resuming via ftp
+    Fixed rollback feature
+
 Wed Nov  3 11:11:02 1999
     Added "trash" icon which is placed always on top for DnD;
     Added "rollback" feature for buggies proxy servers;
